# cmake-demos

./: LICENSE  README.md
minimal-example/: README.md
minimal-example/app/: CMakeLists.txt
minimal-example/app/source/: App.cxx
objc-application/: README.md
objc-application/app/: CMakeLists.txt
objc-application/app/include/: Foo.h
objc-application/app/source/: App.m  Foo.m
transitive-dependencies/: README.md
transitive-dependencies/proj/: CMakeLists.txt
transitive-dependencies/proj/algo/include/algo/: Algo.hxx
transitive-dependencies/proj/app/source/: App.cxx
transitive-dependencies/proj/tool/include/tool/: Tool.hxx
transitive-dependencies/proj/tool/source/: Tool.cxx
transitive-dependencies/proj/util/include/util/: Util.hxx
transitive-dependencies/proj/util/source/: Util.cxx
variables-demo/: Script.cmake  run.py
