
#
# MIT License
#
# Copyright (c) 2019 Mateusz Zych
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction,
# including without limitation the rights to use, copy, modify, merge,
# publish, distribute, sublicense, and/or sell copies of the Software,
# and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice
# shall be included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS",
# WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
#
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
# BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
# WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
# OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#

cmake_minimum_required(VERSION 3.11)

project(App VERSION 0.1.0 LANGUAGES C)


if(CMAKE_SYSTEM_NAME MATCHES Darwin)

    add_executable(app)

    target_sources(app PRIVATE include/Foo.h
                                source/Foo.m
                                source/App.m)

    target_include_directories(app PRIVATE include)

    #
    # [Apple Developer] - Objective-C Runtime
    # ~ https://developer.apple.com/documentation/objectivec/objective-c_runtime?language=objc
    #
    # [Apple Developer] - Foundation Object Runtime
    # ~ https://developer.apple.com/documentation/foundation/object_runtime?language=objc
    #
    target_link_libraries(app PRIVATE "-framework Foundation")

else()

    message("Only building for macOS is supported.")

endif()
